--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-
+.hide {
+    display: none;
+}
 
 body {
     font-family: "Roboto", sans-serif;
@@ -7,10 +9,28 @@ body {
 }
 
 .container {
-    max-width: 1158px;
-    padding: 0 15px;
-    margin: 0 auto;
-}
+    max-width: 320px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .container {
+      max-width: 768px;
+    }
+  }
+  
+  @media screen and (min-width: 1158px) {
+    .container {
+      max-width: 1158px;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+  
+
 
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
@@ -43,6 +63,7 @@ a {
     
 }
 
+
 .logo {
 font-family: "Raleway", sans-serif;
 font-weight: 700;
@@ -54,8 +75,22 @@ color: #4d5ae5;
 }
 
 .header-logo {
-    padding: 24px 0;
-    margin-right: 76px;
+    padding: 16px 0;
+    margin-right: 150px;
+}
+
+@media screen and (min-width: 768px) {
+    .header-logo {
+        padding: 24px 0;
+        margin-right: 120px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .header-logo {
+        padding: 24px 0;
+        margin-right: 76px;
+    }
 }
 
 .logo-start {
@@ -63,20 +98,54 @@ color: #4d5ae5;
     color: #2e2f42;
 }
 
+
+
+/* mobile-menu */
+.mobile-menu-btn {
+display: flex;
+align-items: center;
+justify-content: center;
+border: none;
+padding: 0;
+background-color: transparent;
+}
+
+.mobile-menu-icon {
+    fill: #2f2f37;
+}
+
+@media screen and (min-width: 768px) {
+    .mobile-menu-btn {
+        display: none;
+    }
+}
+
+
 .header-nav {
     display: flex;
     align-items: center;
-
 }
+
 
 .nav-list {
-display: flex;
-align-items: center;
-gap: 40px;
+display: none;
 }
 
+@media screen and (min-width: 768px) {
+    .nav-list {
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
+}
 
 .link-nav {
+    display: none;
+
+}
+
+@media screen and (min-width: 768px) {
+    .link-nav {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #404bbf;
     position: relative;
@@ -88,8 +157,9 @@ gap: 40px;
     line-height: 1.5;
     letter-spacing: -0.02em;
     color: #2e2f42;
-
+    }
 }
+
 .link-nav.active{
     color: #404bbf;
 }
@@ -110,45 +180,93 @@ gap: 40px;
     }
     
 
-
-.link-nav:hover,
-.link-nav:focus  {
-    color: #404bbf;
+@media screen and (min-width: 768px) {
+    .link-nav:hover,
+    .link-nav:focus  {
+      color: #404bbf;
+}
 }
 
 .address {
-    margin-left: auto;
-    font-style: normal;
-    color: #404bbf;
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .address {
+        display: flex;
+        margin-left: auto;
+        font-style: normal;
+        color: #404bbf;
+    }
 }
 
 .list-address {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .list-address {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 12px;
+    
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .list-address {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 40px; 
+    
+    }
 }
 
 .link-address {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    display: block;
-    align-items: center;
-    padding: 24px 0;
-    font-weight: 400;
+   display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .link-address {
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+        display: flex;
+        align-items: center;
+        font-weight: 400;
+        font-size: 12px; 
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: #434455;
+
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .link-address {
+    padding: 24px 0; 
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    color: #434455;
+    }
 }
 
-.link-address:hover,
-.link-address:focus {
+
+.link-address.active {
     color: #404bbf;
 }
 
+@media screen and (min-width: 768px) {
+    .link-address:hover,
+    .link-address:focus {
+        color: #404bbf;
+}
+}
 
 .business {
-    max-width: 1440px;
-    padding: 188px 0;
+    max-width: 320px;
+    padding: 72px 0;
     background-color: #2e2f42;
     display: flex;
     align-items: center;
@@ -157,22 +275,50 @@ gap: 40px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    
 }
 
+@media screen and (min-width: 768px) {
+    .business {
+        max-width: 768px;
+        padding: 112px 0;
+        
+    }
+}
 
+@media screen and (min-width: 1158px) {
+    .business {
+        max-width: 1440px;
+        padding: 188px 0;
+        
+    }
+}
 
 .title-business {
     display: flex;
     align-items: center;
-    max-width: 496px;
-    margin-bottom: 48px;
+    max-width: 216px;
+    margin-bottom: 72px;
     font-weight: 700;
-    font-size: 56px;
-    line-height: 107%;
+    font-size: 36px;
+    line-height: 111%;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+    .title-business {
+        max-width: 496px;
+        margin-bottom: 36px;
+        font-size: 56px;
+        line-height: 107%;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .title-business {   
+        margin-bottom: 48px;
+    }
 }
 
 .button-business {
@@ -180,6 +326,7 @@ gap: 40px;
     display: block;
     align-items: center;
     margin: 0 auto;
+    padding: 16px 32px;
     min-width: 169px;
     height: 56px;
     border: none;
@@ -190,32 +337,63 @@ gap: 40px;
     letter-spacing: 0.04em;
     color: #fff;
     background-color: #4D5AE5;
+    text-align: center;
     cursor: pointer;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 
-.button-business:hover,
-.button-business:focus {
+@media screen and (min-width: 768px) {
+    .button-business {      
+        font-weight: 700;
+        line-height: 107%;
+        letter-spacing: 0.02em;
+
+    }
+}
+
+
+.button-business.active {
     background-color: #404BBF;
 }
 
-.benefits {
-    padding: 120px 0
+@media screen and (min-width: 768px) {
+    .button-business:hover,
+    .button-business:focus {
+        background-color: #404BBF;
+    }
 }
 
+.benefits {
+    padding: 96px 0
+}
+
+@media screen and (min-width: 1158px) {
+    .benefits {
+        padding: 120px 0
+    }
+}
+
+
 .box-svg-benefits {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 8px;
-    gap: 24px;
-    position: relative;
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    width: 264px;
-    height: 112px;
-    background-color: #f4f4fd;
+    display: none;
+   
+}
+
+@media screen and (min-width: 1158px) {
+    .box-svg-benefits {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 8px;
+        gap: 24px;
+        position: relative;
+        border: 1px solid #8e8f99;
+        border-radius: 4px;
+        width: 264px;
+        height: 112px;
+        background-color: #f4f4fd;
+    }
 }
 
 .benefits-icon {
@@ -241,24 +419,74 @@ gap: 40px;
 .list-benefits {
     padding: 0;
     display: flex;
-    gap: 24px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 72px;
+}
+
+@media screen and (min-width: 768px) {
+    .list-benefits {
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+}
+}
+
+@media screen and (min-width: 1158px) {
+    .list-benefits {
+        gap: 24px;
+    }
+    
 }
 
 .li-benefits {
-    flex-basis: calc((100% - 72px) / 4);
+    
+}
+
+@media screen and (min-width: 768px) {
+    .li-benefits {
+        flex-basis: calc((100% - 24px) / 2);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .li-benefits {
+        flex-basis: calc((100% - 72px) / 4);
+    }
 }
 
 .title-benefits {
     margin-bottom: 8px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 120%;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
     letter-spacing: 0.02em;
+    text-align: center;
     color: #2e2f42;
 }
 
+@media screen and (min-width: 768px) {
+    .title-benefits {
+        text-align: left;
+
+}
+}
+
+@media screen and (min-width: 1158px) {
+    .title-benefits {
+        text-align: center;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 120%;
+
+}
+}
+
 .article-benefits {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
@@ -266,16 +494,44 @@ gap: 40px;
 }
 
 
-
-.team {
-    padding: 120px 0;
-    background-color: #f4f4fd;
+@media screen and (min-width: 1158px) {
+    .article-benefits {
+    font-weight: 400;
+    
+}
 }
 
 
+.team {
+    padding: 96px 0;
+    background-color: #f4f4fd;
+}
+
+@media screen and (min-width: 1158px) {
+    .team {
+        padding: 120px 0;
+        background-color: #f4f4fd;
+    }
+}
+
 .list-team {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    gap: 72px;
+}
+
+@media screen and (min-width: 768px) {
+    .list-team {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 64px 24px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .list-team {
+        gap: 24px;
+    }
 }
 
 .li-team {
@@ -283,6 +539,29 @@ gap: 40px;
     flex-basis: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px; 
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+@media screen and (min-width: 768px) {
+    .li-team {
+        background-color: #FFFFFF;
+        flex-basis: calc((100% - 72px) / 4);
+        border-radius: 0px 0px 4px 4px; 
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .li-team {
+        background-color: #FFFFFF;
+        flex-basis: calc((100% - 72px) / 4);
+        border-radius: 0px 0px 4px 4px; 
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    }
+}
+
+
+.team-img {
+    margin: 0 auto;
 }
 
 .title-team {
@@ -450,13 +729,30 @@ gap: 40px;
 .footer {
     background-color: #2e2f42;
     font-family: "Raleway", sans-serif;
-    padding: 100px 0
+    padding: 96px 0
+}
+
+@media screen and (min-width: 768px) {
+    .footer {
+        background-color: #2e2f42;
+        font-family: "Raleway", sans-serif;
+        padding: 100px 0
+    }
 }
 
 .footer-logo {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     margin-bottom: 16px; 
 }
+
+@media screen and (min-width: 768px) {
+    .footer-logo {
+        display: inline-block;
+    }
+}
+
+
 
 .logo-end {
     color: #f4f4fd;
@@ -465,7 +761,7 @@ gap: 40px;
 }
 
 .article-footer {
-    max-width: 264px;
+    max-width: 288px;
     display: block;
     flex-direction: column;
     font-family: "Roboto", sans-serif;
@@ -476,22 +772,71 @@ gap: 40px;
     color: #f4f4fd;
 }
 
+@media screen and (min-width: 768px) {
+    .article-footer {
+        max-width: 264px;
+        
+      }
+}
+
  .footer-container {
   display: flex;
+  flex-direction: column;
   align-items: baseline;
   
 }
 
+@media screen and (min-width: 768px) {
+    .footer-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-left: 110px;
+        
+      }
+}
+
+@media screen and (min-width: 1158px) {
+    .footer-container {
+        margin-left: auto;
+        
+      }
+}
+
 .box-logo-footer {
-    margin-right: 120px;
+   
+}
+
+@media screen and (min-width: 768px) {
+    .box-logo-footer {
+        margin-right: 24px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .box-logo-footer {
+        margin-right: 120px;
+    }
 }
 
 .box-footer {
-    display: block;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 72px auto;
     gap: 16px;
     
+}
+
+@media screen and (min-width: 768px) {
+    .box-footer {
+        display: block;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        gap: 16px;
+        
+    }
 }
 
 .article-icon-footer {
@@ -539,11 +884,27 @@ border-radius: 50%;
 
 
 .form-container {
-    margin-left: 80px;
+    margin: 0;
 
 }
 
+@media screen and (min-width: 768px) { 
+    .form-container {
+         margin-top: 72px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .form-container {
+        margin-top: 0;
+        margin-left: 80px;
+    
+    }
+}
+
 .article-footer-form {
+display: flex;
+justify-content: center;
 margin-bottom: 16px;
 font-weight: 500;
 font-size: 16px;
@@ -552,11 +913,28 @@ letter-spacing: 0.02em;
 color: #fff;
 }
 
+@media screen and (min-width: 768px) {
+    .article-footer-form {
+        display: block;
+        }
+}
+
 .form-footer {
 display: flex;
+flex-direction: column;
 gap: 24px;
 
 }
+
+@media screen and (min-width: 768px) { 
+    .form-footer {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 24px;
+    }
+        
+}
+
 
 .label-form-footer{
     font-family: "Roboto", sans-serif;
@@ -567,7 +945,7 @@ gap: 24px;
     background-color: transparent;
     border: 1px solid #fff;
     border-radius: 4px;
-    width: 264px;
+    width: 288px;
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 
@@ -578,6 +956,13 @@ gap: 24px;
     letter-spacing: 0.04em;
     color: #fff;
 
+}
+
+@media screen and (min-width: 768px) {
+    .input-footer {
+        width: 264px;
+    
+    }
 }
 
 .input-footer:placeholder {
